--- a/terms.html
+++ b/terms.html
@@ -1,285 +1,340 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
 
-  <title>Terms — ProfitPilot</title>
-  <meta name="description" content="Terms of use for ProfitPilot by Stonevia Commerce. Includes estimates disclaimer, payments via Paddle, refunds, acceptable use, and legal terms.">
-  <meta name="robots" content="index,follow">
-  <link rel="canonical" href="https://profitpilot.ukwebtools.com/terms.html">
-  <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
+<title>Terms — ProfitPilot</title>
+<meta name="description" content="Terms of use for ProfitPilot by Stonevia Commerce.">
+<link rel="canonical" href="https://profitpilot.ukwebtools.com/terms.html">
+<link rel="icon" href="https://ukwebtools.com/favicon.svg">
 
-  <style>
-    :root{
-      --bg:#f7f9fc; --bg2:#eef3ff;
-      --txt:#0b1220; --muted:#5b6474;
-      --card:rgba(255,255,255,.80);
-      --line:rgba(16,24,40,.10);
-      --accent:#0ea5a4; --accent2:#4f46e5;
-      --shadow:0 14px 36px rgba(16,24,40,.08);
-      --shadow2:0 16px 44px rgba(16,24,40,.10);
-      --radius:22px;
-      --h-bg:rgba(255,255,255,.78);
-    }
+  <!-- Google Analytics (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F12747YWBN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-F12747YWBN', { anonymize_ip: true });
+  </script>
 
-    *{box-sizing:border-box}
-    html{scroll-behavior:smooth}
-    body{
-      margin:0;
-      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      color:var(--txt);
-      background:
-        radial-gradient(900px 520px at 16% 0%, rgba(14,165,164,.14), transparent 55%),
-        radial-gradient(900px 520px at 84% 0%, rgba(79,70,229,.12), transparent 55%),
-        linear-gradient(180deg,var(--bg2),var(--bg));
-    }
+  <!-- Microsoft Clarity -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "vjsgka2ywg");
+  </script>
 
-    a{color:var(--accent);text-decoration:none}
-    a:hover{text-decoration:underline}
-    :focus-visible{outline:3px solid rgba(79,70,229,.55);outline-offset:3px;border-radius:12px}
+<style>
+:root{
+--bg:#f7f9fc;
+--bg2:#eef3ff;
+--txt:#0b1220;
+--muted:#5b6474;
+--line:rgba(16,24,40,.10);
+--accent:#0ea5a4;
+--accent2:#4f46e5;
+--radius:22px;
 
-    .wrap{max-width:980px;margin:0 auto;padding:14px 16px 54px}
+/* DARK FOOTER */
+--f-bg:#0b0f14;
+--f-line:rgba(255,255,255,.10);
+--f-txt:rgba(255,255,255,.92);
+--f-muted:rgba(255,255,255,.68);
+}
 
-    /* ====== APP-STYLE static HEADER ====== */
-    .pp-header{position:static; top:10px; z-index:100; margin:10px auto 0}
-    .pp-headerbar{
-      background:var(--h-bg);
-      border:1px solid var(--line);
-      border-radius:18px;
-      box-shadow:0 10px 30px rgba(16,24,40,.08);
-      backdrop-filter:blur(10px);
-      padding:10px;
-    }
-    .pp-row{display:flex;align-items:center;gap:12px;flex-wrap:nowrap}
-    .pp-brand{display:flex;align-items:center;gap:10px;flex:0 0 auto; min-width:200px}
-    .pp-logo{
-      width:40px;height:40px;border-radius:14px;
-      background:linear-gradient(135deg, rgba(14,165,164,.20), rgba(79,70,229,.16));
-      border:1px solid var(--line);
-      display:flex;align-items:center;justify-content:center;
-      font-weight:1000; user-select:none;
-      color:var(--txt);
-    }
-    .pp-title{font-weight:1000;line-height:1.05;color:var(--txt)}
-    .pp-sub{font-size:12px;color:var(--muted);font-weight:700;margin-top:3px}
+*{box-sizing:border-box}
 
-    .pp-nav{
-      display:flex;align-items:center;gap:10px;
-      flex:1 1 auto; justify-content:flex-end;
-      overflow-x:auto; -webkit-overflow-scrolling:touch;
-      padding:2px 4px; scrollbar-width:thin;
-    }
-    .pp-nav::-webkit-scrollbar{height:8px}
-    .pp-nav::-webkit-scrollbar-thumb{background:rgba(16,24,40,.14);border-radius:999px}
+body{
+margin:0;
+font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+color:var(--txt);
+background:
+radial-gradient(900px 520px at 20% 0%, rgba(14,165,164,.14),transparent 55%),
+radial-gradient(900px 520px at 80% 0%, rgba(79,70,229,.10),transparent 55%),
+linear-gradient(180deg,var(--bg2),var(--bg));
+}
 
-    .pp-btn{
-      padding:10px 14px;border-radius:999px;border:1px solid var(--line);
-      background:rgba(255,255,255,.92);color:var(--txt);
-      font-weight:900;
-      box-shadow:0 8px 18px rgba(16,24,40,.06);
-      display:inline-flex;gap:8px;align-items:center;white-space:nowrap;
-      transition:transform .08s ease;
-      cursor:pointer;
-    }
-    .pp-btn:hover{transform:translateY(-1px);text-decoration:none}
-    .pp-btn:active{transform:translateY(0)}
-    .pp-btn.ghost{background:transparent;box-shadow:none}
-    .pp-btn.primary{
-      border:none;color:#fff;
-      background:linear-gradient(135deg,var(--accent),var(--accent2));
-      box-shadow:0 16px 34px rgba(79,70,229,.16);
-    }
+.wrap{max-width:980px;margin:auto;padding:14px 16px 50px}
 
-    @media(max-width:760px){
-      .pp-sub{display:none}
-      .pp-brand{min-width:auto}
-    }
+/* ================= HEADER ================= */
 
-    /* ====== CONTENT CARD ====== */
-    .card{
-      margin-top:14px;
-      background:var(--card);
-      border:1px solid var(--line);
-      border-radius:var(--radius);
-      padding:20px;
-      box-shadow:var(--shadow2);
-    }
-    h1{margin:0 0 8px;font-size:28px;letter-spacing:-.02em}
-    h2{margin:20px 0 8px;font-size:18px}
-    p,li{color:rgba(16,24,40,.70);line-height:1.75}
-    ul{margin:8px 0 0;padding-left:18px}
-    .meta{font-size:12.5px;color:rgba(16,24,40,.62);line-height:1.6;margin:0 0 12px}
+.pp-header{
+position:static;
+top:10px;
+z-index:100;
+margin:12px auto 0;
+}
 
-    /* ====== CLEAN FOOTER (MATCHES APP STYLE) ====== */
-    .pp-foot{
-      margin-top:18px;padding-top:14px;border-top:1px solid var(--line);
-    }
-    .pp-footgrid{
-      display:grid;
-      grid-template-columns:1.2fr .8fr;
-      gap:12px;
-      align-items:start;
-    }
-    @media(max-width:820px){ .pp-footgrid{grid-template-columns:1fr} }
-    .pp-footbrand{color:var(--txt);font-weight:1000}
-    .pp-footmut{
-      margin-top:6px;
-      color:rgba(16,24,40,.62);
-      font-size:12.5px;
-      line-height:1.7;
-    }
-    .pp-footlinks{
-      display:flex;flex-wrap:wrap;gap:8px;justify-content:flex-end;
-    }
-    @media(max-width:820px){ .pp-footlinks{justify-content:flex-start} }
-    .pp-footlinks a{
-      padding:8px 10px;border-radius:999px;
-      border:1px solid var(--line);
-      background:rgba(255,255,255,.86);
-      font-weight:850;
-      color:var(--txt);
-    }
-    .pp-footbottom{
-      margin-top:12px;padding-top:12px;
-      border-top:1px solid rgba(16,24,40,.08);
-      color:rgba(16,24,40,.62);
-      font-size:12.5px;
-      line-height:1.7;
-      display:flex;
-      justify-content:space-between;
-      gap:10px;
-      flex-wrap:wrap;
-      align-items:center;
-    }
+.pp-headerbar{
+background:rgba(255,255,255,.78);
+border:1px solid var(--line);
+border-radius:18px;
+backdrop-filter:blur(10px);
+padding:10px;
+box-shadow:0 10px 30px rgba(0,0,0,.08);
+}
 
-    @media (prefers-reduced-motion: reduce){
-      html{scroll-behavior:auto}
-      .pp-btn{transition:none}
-      .pp-btn:hover{transform:none}
-    }
-  </style>
+.pp-row{
+display:flex;
+align-items:center;
+gap:12px;
+}
+
+.pp-brand{
+display:flex;
+align-items:center;
+gap:10px;
+}
+
+.pp-logo{
+width:40px;height:40px;
+border-radius:14px;
+background:linear-gradient(135deg,#0ea5a4,#4f46e5);
+color:#fff;
+display:flex;
+align-items:center;
+justify-content:center;
+font-weight:900;
+}
+
+.pp-title{font-weight:1000}
+.pp-sub{font-size:12px;color:var(--muted)}
+
+.pp-nav{
+margin-left:auto;
+display:flex;
+gap:10px;
+}
+
+.pp-btn{
+padding:10px 14px;
+border-radius:999px;
+border:1px solid var(--line);
+background:#fff;
+font-weight:900;
+color:#0b1220;
+text-decoration:none;
+}
+
+.pp-btn.primary{
+border:none;
+color:#fff;
+background:linear-gradient(135deg,var(--accent),var(--accent2));
+}
+
+/* ================= CARD ================= */
+
+.card{
+margin-top:14px;
+background:#fff;
+border-radius:var(--radius);
+border:1px solid var(--line);
+padding:22px;
+box-shadow:0 14px 36px rgba(0,0,0,.08);
+}
+
+h1{margin:0 0 10px;font-size:28px}
+h2{margin:22px 0 8px}
+p,li{color:var(--muted);line-height:1.75}
+ul{padding-left:18px}
+
+.meta{
+font-size:13px;
+color:rgba(16,24,40,.6);
+margin-bottom:12px;
+}
+
+/* ================= DARK FOOTER ================= */
+
+.pp-foot{
+margin-top:28px;
+border-radius:18px;
+overflow:hidden;
+}
+
+.pp-footinner{
+background:
+radial-gradient(900px 520px at 20% 0%, rgba(94,234,212,.10),transparent 55%),
+radial-gradient(900px 520px at 80% 0%, rgba(96,165,250,.10),transparent 55%),
+var(--f-bg);
+
+border:1px solid var(--f-line);
+padding:18px;
+}
+
+.pp-footgrid{
+display:grid;
+grid-template-columns:1.2fr .8fr;
+gap:16px;
+}
+
+@media(max-width:820px){
+.pp-footgrid{grid-template-columns:1fr}
+}
+
+.pp-footbrand{
+color:var(--f-txt);
+font-weight:1000;
+}
+
+.pp-footmut{
+margin-top:8px;
+color:var(--f-muted);
+font-size:13px;
+line-height:1.7;
+}
+
+.pp-footlinks{
+display:flex;
+flex-wrap:wrap;
+gap:10px;
+justify-content:flex-end;
+}
+
+@media(max-width:820px){
+.pp-footlinks{justify-content:flex-start}
+}
+
+.pp-footlinks a{
+padding:8px 12px;
+border-radius:999px;
+border:1px solid rgba(255,255,255,.12);
+background:rgba(255,255,255,.06);
+color:var(--f-txt);
+font-weight:900;
+text-decoration:none;
+}
+
+.pp-footbottom{
+margin-top:14px;
+padding-top:14px;
+border-top:1px solid rgba(255,255,255,.10);
+display:flex;
+justify-content:space-between;
+flex-wrap:wrap;
+color:rgba(255,255,255,.7);
+font-size:13px;
+}
+
+</style>
 </head>
 
 <body>
-  <div class="wrap">
 
-    <!-- ====== SIMPLE APP HEADER (static) ====== -->
-    <header class="pp-header" role="navigation" aria-label="Primary">
-      <div class="pp-headerbar">
-        <div class="pp-row">
-          <div class="pp-brand" aria-label="ProfitPilot">
-            <div class="pp-logo" aria-hidden="true">PP</div>
-            <div>
-              <div class="pp-title">ProfitPilot</div>
-              <div class="pp-sub">Independent tool by UKwebtools</div>
-            </div>
-          </div>
+<div class="wrap">
 
-          <nav class="pp-nav" aria-label="Main">
-            <a class="pp-btn ghost" href="index.html">Home</a>
-            <a class="pp-btn" href="help.html">How to use</a>
-            <a class="pp-btn primary" href="login.html">Account</a>
-          </nav>
-        </div>
-      </div>
-    </header>
+<header class="pp-header">
+<div class="pp-headerbar">
+<div class="pp-row">
 
-    <!-- ====== CONTENT ====== -->
-    <div class="card">
-      <h1>Terms of Use</h1>
-      <p class="meta"><b>Last updated:</b> <span id="d">08 February 2026</span></p>
+<div class="pp-brand">
+<div class="pp-logo">PP</div>
+<div>
+<div class="pp-title">ProfitPilot</div>
+<div class="pp-sub">Independent tool by UKwebtools</div>
+</div>
+</div>
 
-      <p>
-        These Terms are provided by <b>Stonevia Commerce</b>, operating the ProfitPilot tool on the UKwebtools domain.
-        By accessing or using ProfitPilot, you agree to these Terms.
-      </p>
+<nav class="pp-nav">
+<a class="pp-btn" href="index.html">Home</a>
+<a class="pp-btn" href="help.html">How to use</a>
+<a class="pp-btn primary" href="login.html">Account</a>
+</nav>
 
-      <h2>1) Estimates only</h2>
-      <p>
-        ProfitPilot provides estimates based on your inputs. Outputs depend entirely on the information you enter and your assumptions.
-        Results are not guaranteed and nothing on ProfitPilot is financial, legal, or tax advice. You are responsible for decisions you make using the tool.
-      </p>
+</div>
+</div>
+</header>
 
-      <h2>2) No affiliation</h2>
-      <p>
-        ProfitPilot is an independent tool. We are not affiliated with or endorsed by any marketplace, platform, or payment provider.
-      </p>
+<div class="card">
 
-      <h2>3) Accounts and access</h2>
-      <ul>
-        <li>You are responsible for keeping your login secure.</li>
-        <li>Trial limits and feature limits may apply and may change as the product improves.</li>
-      </ul>
+<h1>Terms of Use</h1>
+<p class="meta"><b>Last updated:</b> 08 February 2026</p>
 
-      <h2>4) Purchases, payments, and taxes</h2>
-      <p>
-        Payments for ProfitPilot are processed by <b>Paddle</b> as Merchant of Record. Paddle may calculate, collect, and remit taxes (including VAT) where required.
-        Receipts and payment confirmations are issued by Paddle.
-      </p>
+<p>
+These Terms are provided by <b>Stonevia Commerce</b>, operating ProfitPilot.
+By using ProfitPilot you agree to these Terms.
+</p>
 
-      <h2>5) Refunds</h2>
-      <p>
-        Refunds are handled in accordance with Paddle’s Checkout Buyer Terms and applicable consumer protection laws.
-        If you are purchasing as a consumer, you may request a refund within <b>14 days</b> of purchase (the day after the transaction is completed).
-        Details and refund instructions are available on our <a href="refunds.html"><b>Refund Policy</b></a> page.
-      </p>
+<h2>1) Estimates only</h2>
+<p>
+ProfitPilot provides estimates based on your inputs.
+Results are not guaranteed and do not constitute financial,
+legal, or tax advice.
+</p>
 
-      <h2>6) Reviews</h2>
-      <p>
-        Reviews you submit may appear publicly. Do not include sensitive personal information.
-        We may remove content that is illegal, spam, or abusive.
-      </p>
+<h2>2) No affiliation</h2>
+<p>
+ProfitPilot is an independent tool and is not affiliated
+with marketplaces or payment providers.
+</p>
 
-      <h2>7) Acceptable use</h2>
-      <ul>
-        <li>No attempts to bypass access controls or limits.</li>
-        <li>No attacks, scraping, or abuse of infrastructure.</li>
-        <li>No illegal use.</li>
-      </ul>
+<h2>3) Accounts</h2>
+<ul>
+<li>You are responsible for account security.</li>
+<li>Feature limits may change as the product evolves.</li>
+</ul>
 
-      <h2>8) Support</h2>
-      <p>
-        Email: <a href="mailto:support@ukwebtools.com"><b>support@ukwebtools.com</b></a>
-      </p>
+<h2>4) Payments</h2>
+<p>
+Payments are processed by <b>Paddle</b> as Merchant of Record.
+Taxes including VAT may be applied where required.
+</p>
 
-      <h2>9) Governing law</h2>
-      <p>
-        These Terms are governed by the laws of England and Wales. Courts of England and Wales will have exclusive jurisdiction,
-        except where consumer protection laws provide otherwise.
-      </p>
+<h2>5) Refunds</h2>
+<p>
+Consumers may request refunds within <b>14 days</b>.
+See the <a href="refunds.html">Refund Policy</a>.
+</p>
 
-      <!-- ====== CLEAN FOOTER (MATCHING) ====== -->
-      <footer class="pp-foot" role="contentinfo">
-        <div class="pp-footgrid">
-          <div>
-            <div class="pp-footbrand">ProfitPilot</div>
-            <div class="pp-footmut">
-              <b>Legal entity:</b> Stonevia Commerce.<br>
-              Need help? <a href="mailto:support@ukwebtools.com"><b>support@ukwebtools.com</b></a>
-            </div>
-          </div>
+<h2>6) Acceptable use</h2>
+<ul>
+<li>No bypassing limits.</li>
+<li>No abuse or attacks.</li>
+<li>No illegal use.</li>
+</ul>
 
-          <div class="pp-footlinks" aria-label="Footer links">
-            <a href="privacy.html">Privacy</a>
-            <a href="refunds.html">Refund Policy</a>
-            
-            <a href="faq.html">FAQ</a>
-            <a href="reviews.html">Reviews</a>
-            <a href="pricing.html">Pricing</a>
-          </div>
-        </div>
+<h2>7) Governing law</h2>
+<p>
+These Terms are governed by the laws of England and Wales.
+</p>
 
-        <div class="pp-footbottom">
-          <div>© <span id="yr"></span> UKwebtools • ProfitPilot</div>
-          <div><a href="https://ukwebtools.com/" rel="nofollow"><b>UKwebtools</b></a></div>
-        </div>
-      </footer>
-    </div>
-  </div>
+</div>
 
-  <script>
-    document.getElementById("yr").textContent = new Date().getFullYear();
-  </script>
+<footer class="pp-foot">
+<div class="pp-footinner">
+
+<div class="pp-footgrid">
+
+<div>
+<div class="pp-footbrand">ProfitPilot</div>
+<div class="pp-footmut">
+Legal entity: Stonevia Commerce.<br>
+Need help? support@ukwebtools.com
+</div>
+</div>
+
+<div class="pp-footlinks">
+<a href="privacy.html">Privacy</a>
+<a href="refunds.html">Refund Policy</a>
+
+<a href="faq.html">FAQ</a>
+<a href="reviews.html">Reviews</a>
+<a href="pricing.html">Pricing</a>
+</div>
+
+</div>
+
+<div class="pp-footbottom">
+<div>© 2026 UKwebtools • ProfitPilot</div>
+<div><a href="https://ukwebtools.com">UKwebtools</a></div>
+</div>
+
+</div>
+</footer>
+
+</div>
 </body>
 </html>
