--- a/reset.html
+++ b/reset.html
@@ -9,181 +9,136 @@
 
   <style>
     :root{
-      --bg:#0b1220; --bg2:#0f172a;
-      --txt:#eaf0ff; --muted:rgba(226,232,240,.72);
-      --card:rgba(15,23,42,.86); --cardSolid:#0f172a;
-      --line:rgba(255,255,255,.12); --line2:rgba(255,255,255,.10);
-      --accent:#0ea5a4; --accent2:#4f46e5;
-      --shadow:0 14px 44px rgba(0,0,0,.40);
-      --shadow2:0 26px 90px rgba(0,0,0,.55);
-      --ring:rgba(14,165,164,.45);
-      --inputBg:rgba(2,6,23,.55);
-      --radius:20px;
+      --bg:#070b12; --bg2:#0a1020; --card:#0c1426; --card2:#0a1222;
+      --txt:#eaf0ff; --muted:rgba(234,240,255,.70);
+      --line:rgba(255,255,255,.10); --line2:rgba(255,255,255,.08);
+      --accent:#5eead4; --accent2:#60a5fa;
+      --shadow2:0 24px 90px rgba(0,0,0,.55);
+      --ring:rgba(96,165,250,.55);
+      --ok:rgba(52,211,153,.28);
+      --bad:rgba(251,113,133,.28);
     }
     :root[data-theme="day"]{
-      --bg:#f6f8fb; --bg2:#eef2ff;
-      --txt:#0b1220; --muted:#556072;
-      --card:rgba(255,255,255,.86); --cardSolid:#ffffff;
-      --line:rgba(15,23,42,.12); --line2:rgba(15,23,42,.08);
-      --shadow:0 14px 44px rgba(15,23,42,.10);
-      --shadow2:0 26px 90px rgba(15,23,42,.12);
-      --ring:rgba(79,70,229,.35);
-      --inputBg:#ffffff;
+      --bg:#f6f8fb; --bg2:#eef2ff; --card:#fff; --card2:#fff;
+      --txt:#0b1220; --muted:rgba(11,18,32,.65);
+      --line:rgba(16,24,40,.10); --line2:rgba(16,24,40,.08);
+      --shadow2:0 24px 90px rgba(16,24,40,.12);
+      --ring:rgba(79,70,229,.40);
+      --ok:rgba(34,197,94,.22);
+      --bad:rgba(239,68,68,.22);
     }
     :root[data-theme="soft"]{
-      --bg:#fbfbff; --bg2:#f3f4ff;
-      --txt:#0b1220; --muted:#596276;
-      --card:rgba(255,255,255,.90); --cardSolid:#ffffff;
-      --line:rgba(15,23,42,.12); --line2:rgba(15,23,42,.09);
-      --shadow:0 14px 44px rgba(15,23,42,.10);
-      --shadow2:0 26px 90px rgba(15,23,42,.12);
-      --ring:rgba(14,165,164,.30);
-      --inputBg:#ffffff;
+      --bg:#fbfbff; --bg2:#f3f4ff; --card:#fff; --card2:#fff;
+      --txt:#0b1220; --muted:rgba(11,18,32,.65);
+      --line:rgba(16,24,40,.11); --line2:rgba(16,24,40,.08);
+      --shadow2:0 24px 90px rgba(16,24,40,.12);
+      --ring:rgba(94,234,212,.35);
+      --ok:rgba(34,197,94,.22);
+      --bad:rgba(239,68,68,.22);
     }
+
     *{box-sizing:border-box}
     body{
       margin:0;
-      font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
       color:var(--txt);
       background:
-        radial-gradient(900px 520px at 20% -10%, rgba(79,70,229,.14), transparent 60%),
-        radial-gradient(900px 520px at 80% -10%, rgba(14,165,164,.14), transparent 60%),
-        linear-gradient(180deg,var(--bg2),var(--bg));
+        radial-gradient(900px 520px at 20% -10%, rgba(94,234,212,.10), transparent 55%),
+        radial-gradient(900px 520px at 80% -10%, rgba(96,165,250,.10), transparent 55%),
+        linear-gradient(180deg, var(--bg2), var(--bg));
       min-height:100vh;
     }
-    a{color:var(--accent);text-decoration:none;font-weight:900}
+    a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
     :focus-visible{outline:3px solid var(--ring);outline-offset:3px;border-radius:12px}
 
-    .wrap{max-width:1120px;margin:0 auto;padding:0 18px}
-    header{padding:16px 0}
-    .nav{background:var(--card);border:1px solid var(--line);border-radius:0 0 22px 22px;backdrop-filter:blur(14px);box-shadow:var(--shadow);overflow:hidden}
-    .navInner{display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap;padding:12px 14px}
-    .brand{display:flex;align-items:center;gap:12px;min-width:220px}
-    .logo{
-      width:42px;height:42px;border-radius:14px;
-      display:flex;align-items:center;justify-content:center;
-      font-weight:1000;letter-spacing:-.5px;
-      border:1px solid var(--line2);
-      background:rgba(255,255,255,.06);
-    }
-    :root[data-theme="day"] .logo, :root[data-theme="soft"] .logo{background:rgba(15,23,42,.03)}
-    .bt{display:flex;flex-direction:column;line-height:1.1}
-    .t1{font-weight:1000;font-size:15px;letter-spacing:-.2px}
-    .t2{font-size:12px;color:var(--muted);margin-top:2px}
-    .right{display:flex;align-items:center;gap:10px;flex-wrap:wrap;justify-content:flex-end}
-    .btn{
-      display:inline-flex;align-items:center;justify-content:center;gap:8px;
-      padding:10px 14px;border-radius:999px;
-      border:1px solid var(--line);
-      background:var(--inputBg);
-      color:var(--txt);
-      font-weight:950;
-      cursor:pointer;
-      text-decoration:none;
-      white-space:nowrap;
-    }
-    .btn.primary{border-color:transparent;background:linear-gradient(135deg,var(--accent),rgba(79,70,229,.92));color:#fff}
-    .select{
-      appearance:none;
-      padding:10px 40px 10px 14px;border-radius:999px;
-      border:1px solid var(--line);
-      background:var(--inputBg);
-      color:var(--txt);font-weight:950;cursor:pointer;
-      background-image:
-        linear-gradient(45deg, transparent 50%, currentColor 50%),
-        linear-gradient(135deg, currentColor 50%, transparent 50%);
-      background-position:
-        calc(100% - 18px) calc(50% - 3px),
-        calc(100% - 13px) calc(50% - 3px);
-      background-size:5px 5px, 5px 5px;
-      background-repeat:no-repeat;
-      max-width:220px;
-    }
-
-    main{padding:22px 0 78px}
-    .grid{display:grid;place-items:center}
+    .wrap{max-width:560px;margin:54px auto 70px;padding:0 16px}
     .card{
-      width:min(640px,100%);
-      background:var(--card);
+      background:linear-gradient(180deg, rgba(94,234,212,.10), transparent 60%), var(--card);
       border:1px solid var(--line);
-      border-radius:var(--radius);
-      backdrop-filter:blur(14px);
-      box-shadow:var(--shadow2);
+      border-radius:18px;
       padding:22px;
+      box-shadow:var(--shadow2);
     }
-    h1{margin:0 0 8px;font-size:22px;font-weight:1000;letter-spacing:-.3px}
-    .lead{margin:0 0 16px;color:var(--muted);line-height:1.6;font-size:13.5px}
-    label{display:block;margin:12px 0 6px;font-size:13px;font-weight:1000}
+    h1{margin:0 0 8px;font-size:22px;letter-spacing:-.02em}
+    .subtitle{margin:0 0 16px;color:var(--muted);font-size:13px;line-height:1.6}
+
+    label{font-size:12px;color:var(--muted);margin-top:14px;display:block;font-weight:900}
     input{
       width:100%;
-      padding:12px 14px;
+      margin-top:8px;
+      padding:12px 12px;
       border-radius:14px;
       border:1px solid var(--line);
-      background:var(--inputBg);
+      background:var(--card2);
       color:var(--txt);
-      font-size:15px;
       outline:none;
+      font-size:15px;
     }
-    input:focus{border-color:rgba(14,165,164,.42);box-shadow:0 0 0 4px rgba(14,165,164,.12)}
+    :root[data-theme="day"] input,
+    :root[data-theme="soft"] input{ background:#fff; }
+    input:focus{border-color:rgba(94,234,212,.35);box-shadow:0 0 0 4px rgba(94,234,212,.10)}
+
+    .btn{
+      width:100%;
+      margin-top:14px;
+      padding:12px;
+      border-radius:999px;
+      border:none;
+      cursor:pointer;
+      font-weight:1000;
+      color:#061018;
+      background:linear-gradient(135deg,var(--accent),var(--accent2));
+      box-shadow:0 14px 28px rgba(96,165,250,.18);
+      transition:transform .08s ease, filter .15s ease, opacity .15s ease;
+    }
+    .btn:hover{transform:translateY(-1px);filter:brightness(1.02)}
+    .btn:active{transform:translateY(0)}
+    .btn:disabled{opacity:.6;cursor:not-allowed;transform:none;filter:none}
+
     .msg{
       margin-top:12px;
-      min-height:44px;
+      font-size:12.5px;
+      line-height:1.6;
+      color:var(--muted);
       padding:10px 12px;
       border-radius:14px;
       border:1px solid var(--line2);
       background:rgba(255,255,255,.04);
-      color:var(--muted);
+      min-height:44px;
       display:flex;align-items:center;
-      font-size:12.8px;line-height:1.55;
       word-break:break-word;
     }
-    .msg.ok{border-color:rgba(14,165,164,.32);background:rgba(14,165,164,.08);color:var(--txt)}
-    .msg.bad{border-color:rgba(239,68,68,.30);background:rgba(239,68,68,.08);color:var(--txt)}
+    .msg.ok{border-color:var(--ok);background:rgba(52,211,153,.08);color:var(--txt)}
+    .msg.bad{border-color:var(--bad);background:rgba(251,113,133,.08);color:var(--txt)}
+
+    .row{display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap;margin-top:12px}
+    .tiny{font-size:12px;color:var(--muted);font-weight:900}
   </style>
 </head>
 
 <body>
-<header>
   <div class="wrap">
-    <div class="nav">
-      <div class="navInner">
-        <div class="brand">
-          <div class="logo" aria-hidden="true">PP</div>
-          <div class="bt">
-            <div class="t1">ProfitPilot</div>
-            <div class="t2">Reset password</div>
-          </div>
-        </div>
-        <div class="right">
-          <a class="btn" href="login.html">Back to login</a>
-          <a class="btn" href="signup.html">Sign up</a>
-          <select class="select" id="themeSel" aria-label="Theme">
-            <option value="day">Day</option>
-            <option value="soft">Soft</option>
-            <option value="midnight">Midnight</option>
-          </select>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
-
-<main class="wrap">
-  <div class="grid">
     <div class="card">
       <h1>Reset your password</h1>
-      <p class="lead">Enter your email and we’ll send you a secure reset link.</p>
+      <p class="subtitle">
+        Enter your email and we’ll send a secure reset link.
+        If you don’t see it, check Spam/Junk.
+      </p>
 
       <label for="email">Email</label>
       <input id="email" type="email" placeholder="you@example.com" autocomplete="email" inputmode="email" required>
 
-      <button class="btn primary" id="sendBtn" type="button" style="width:100%;margin-top:12px">Send reset link</button>
+      <button class="btn" id="sendBtn" type="button">Send reset link</button>
 
       <div class="msg" id="msg" role="status" aria-live="polite">—</div>
+
+      <div class="row">
+        <a class="tiny" href="login.html">Back to login</a>
+        <a class="tiny" href="signup.html">Create account</a>
+      </div>
     </div>
   </div>
-</main>
 
 <script type="module">
   import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
@@ -201,19 +156,6 @@
     }
   });
 
-  // Theme
-  const themeSel = document.getElementById("themeSel");
-  function setTheme(t){
-    document.documentElement.setAttribute("data-theme", t);
-    try{ localStorage.setItem("pp_theme", t); }catch(e){}
-  }
-  (function initTheme(){
-    const saved = localStorage.getItem("pp_theme") || "midnight";
-    setTheme(saved);
-    themeSel.value = saved;
-  })();
-  themeSel.addEventListener("change", ()=> setTheme(themeSel.value));
-
   const emailEl = document.getElementById("email");
   const sendBtn = document.getElementById("sendBtn");
   const msg = document.getElementById("msg");
@@ -222,41 +164,34 @@
     msg.textContent = text || "—";
     msg.className = "msg" + (kind ? " " + kind : "");
   }
-  function setLoading(on){
-    sendBtn.disabled = !!on;
-    sendBtn.textContent = on ? "Sending…" : "Send reset link";
-  }
-  function looksLikeEmail(v){
+  function looksEmail(v){
+    v = String(v||"").trim();
     return v.includes("@") && v.includes(".") && v.length >= 6;
   }
 
   sendBtn.addEventListener("click", async ()=>{
     const email = emailEl.value.trim();
     if (!email){ setMsg("Please enter your email.", "bad"); emailEl.focus(); return; }
-    if (!looksLikeEmail(email)){ setMsg("Please enter a valid email address.", "bad"); emailEl.focus(); return; }
+    if (!looksEmail(email)){ setMsg("Please enter a valid email address.", "bad"); emailEl.focus(); return; }
 
-    setLoading(true);
-    setMsg("Sending reset email…");
+    sendBtn.disabled = true;
+    setMsg("Sending…");
 
-    const { error } = await supabase.auth.resetPasswordForEmail(email, {
-      redirectTo: `${location.origin}/update-password.html`
-    });
+    // IMPORTANT: redirect user to update-password.html
+    const redirectTo = `${location.origin}/update-password.html`;
 
-    setLoading(false);
+    const { error } = await supabase.auth.resetPasswordForEmail(email, { redirectTo });
 
-    // We intentionally don’t reveal whether an account exists.
+    sendBtn.disabled = false;
+
+    // Security best practice: don't reveal if account exists
     if (error){
       console.error(error);
-      const low = String(error.message || "").toLowerCase();
-      if (low.includes("rate") || low.includes("too many")) {
-        setMsg("Too many attempts. Please wait a moment and try again.", "bad");
-      } else {
-        setMsg("If an account exists for that email, a reset link has been sent. Check Inbox + Spam/Junk.", "ok");
-      }
+      setMsg("If an account exists for that email, a reset link has been sent. Check inbox + spam.", "ok");
       return;
     }
 
-    setMsg("If an account exists for that email, a reset link has been sent. Check Inbox + Spam/Junk.", "ok");
+    setMsg("If an account exists for that email, a reset link has been sent. Check inbox + spam.", "ok");
   });
 </script>
 </body>
